Inserted nav bar with images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <body>
 
+        <div class="card-panel #263238 blue-grey darken-4">
+
+
  <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo center">Logo</a>
@@ -21,8 +24,63 @@
     </div>
   </nav>
 
+       
+
+  <div class="row">
+
+  <div class="col m3">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://via.placeholder.com/100x100">
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col m3">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://via.placeholder.com/100x100">
+         </div>
+      <div class="card-content">
+        <h1>This is a title</h1>
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col m3">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://via.placeholder.com/100x100">
+         </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
+
+    <div class="col m3">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://via.placeholder.com/100x100">
+         </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+      </div>
+    </div>
+  </div>
 
 
+
+</div>
+
+
+
+
+</div>
       <!--JavaScript at end of body for optimized loading-->
       <script src="main.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
