Updated carousel and modal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  
   <link rel="stylesheet" type="text/css" href="main.css">
 
 <!-- MOBILE RESPONSIVE -->
@@ -19,12 +21,12 @@
 
 <!-- CAROUSEL -->
 
-  <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="https://via.placeholder.com/100x100""></a>
-    <a class="carousel-item" href="#two!"><img src="https://via.placeholder.com/100x100""></a>
-    <a class="carousel-item" href="#three!"><img src="https://via.placeholder.com/100x100""></a>
-    <a class="carousel-item" href="#four!"><img src="https://via.placeholder.com/100x100""></a>
-    <a class="carousel-item" href="#five!"><img src="https://via.placeholder.com/100x100""></a>
+  <div class="carousel carousel-slider">
+    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
+    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/1"></a>
+    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/1"></a>
+    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/1"></a>
+    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/800/400/food/1"></a>
   </div>
 
  <!-- NAV BAR -->
@@ -91,6 +93,57 @@
 
   </div>
 
+<div class="row">
+
+    <div class="col m3">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://via.placeholder.com/100x100">
+        </div>
+        <div class="card-content">
+          <h6>The Fruit of the Kings</h6>
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col m3">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://via.placeholder.com/100x100">
+        </div>
+        <div class="card-content">
+          <h6>Watermelon Snow</h6>
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col m3">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://via.placeholder.com/100x100">
+        </div>
+        <div class="card-content">
+          <h6>The Fruit of the Kings</h6>
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col m3">
+      <div class="card">
+        <div class="card-image">
+          <img src="https://via.placeholder.com/100x100">
+        </div>
+        <div class="card-content">
+          <h6>Watermelon Snow</h6>
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 <!-- MODAL -->
 
@@ -99,7 +152,7 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <p>This should open after 3 seconds. But it's not.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
